fix docker/run-wrapper