@@ -8,6 +8,7 @@ set -x || true
 exec java \
     -Xmx512M \
     --add-exports java.base/sun.nio.ch=ALL-UNNAMED \
+    --add-exports java.base/jdk.internal.access=ALL-UNNAMED \
     -Ddhfs.objects.persistence.files.root=/dhfs_root/p \
     -Ddhfs.objects.root=/dhfs_root/d \
     -Ddhfs.fuse.root=/dhfs_root_fuse \
